[package]

name = "rustspec_assertions"
version = "0.1.1"
authors = ["Unai Orbe <unai@orbe.me>"]

homepage = "https://github.com/uorbe001/rustspec-assertions"
repository = "https://github.com/uorbe001/rustspec-assertions"
readme = "Readme.md"
description = "BDD style assertion library"
keywords = ["testing", "bdd", "expect", "assertions"]
license = "MIT"

[lib]
name = "rustspec_assertions"
path = "src/lib.rs"
crate_type = ["dylib"]
